# SecondExperiment2025

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
LeapSDK/include/: LeapC.h
LeapSDK/leapc_cffi/: _leapc_cffi.c
LeapSDK/lib/cmake/LeapSDK/: leapsdk-configVersion.cmake
LeapSDK/lib/x64/cmake/: LeapCTargets-relwithdebinfo.cmake  LeapCTargets.cmake
LeapSDK/samples/: CMakeLists.txt  DeviceTransformSample.c  ExampleConnection.c  ExampleConnection.h  FiducialTrackingSample.c
src/: SoundGenerator.py  config.py  gameScene.py  leapInput.py  leapdata.py  main.py  visualizer.py
src/mysite/: settings.py  urls.py
src/scenes/: baseScene.py  loadScene.py  playScene.py  practiceScene.py  startScene.py
