[project]
name = "secondexperiment2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"  # ← 明示的に入れるとより明確
numpy = ">=2.2.4,<3.0.0"
build = ">=1.2.2.post1,<2.0.0"
cffi = ">=1.17.1,<2.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
leap = { path = "./leapc-python-bindings/leapc-python-api", develop = true }
pygame = "^2.6.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
